# Auto-WSGR

./: README.md  pyproject.toml
documentation/: 使用说明.md
src/AutoWSGR/data/: default_settings.yaml  default_ship_names.yaml
src/AutoWSGR/data/map/event/20230927/: H-5.yaml
src/AutoWSGR/data/plans/: default.yaml
src/AutoWSGR/data/plans/event/20230809/: E1.yaml
src/AutoWSGR/data/plans/event/20230927/: E10A.yaml  E10B.yaml  E6.yaml  E7.yaml  E8.yaml  E9.yaml
src/AutoWSGR/data/plans/exercise/: plan_1.yaml
src/AutoWSGR/data/plans/normal_fight/: 2-1.yaml  8-5AI - star.yaml  9-2.yaml
src/AutoWSGR/ocr/: digit.py
src/AutoWSGR/scripts/: daily_api.py
