[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry-dynamic-versioning"

[tool.poetry]
name = "AutoWSGR"
version = "0.2.2.1"
description = "战舰少女R全家桶"
authors = ["Phantom_Peng"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
opencv-python = "==4.5.4.60"
opencv-contrib-python = "==4.5.4.60"
opencv-python-headless = "==4.5.4.60"
airtest = "*"
keyboard = "*"
easyocr = "*"
streamlit = "*"
pre-commit = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]

[tool.poetry.plugins]
"poetry-dynamic-versioning" = "*"

[tool.poetry.preprocessors]
version = "python -c 'import re; with open(\"src/AutoWSGR/__init__.py\", \"r\") as f: print(re.search(r\"__version__ = ['\"](.*?)['\"]\", f.read()).group(1))'"
